# controllers/like_controller.go
@@ -17,7 +17,18 @@ func NewLikeController(repo repository.LikeRepository) *LikeController {
 	return &LikeController{Repo: repo}
 }
 
-func (ctl *LikeController) GetLikeByRecipe(c *gin.Context) {
+// GetLikesByRecipe
+// @Summary Get list of likes by recipe
+// @Description Retrieve all likes with pagination
+// @Tags Likes
+// @Accept json
+// @Produce json
+// @Param page query int false "Page number"
+// @Param limit query int false "Items per page"
+// @Success 200 {object} utils.PaginatedResponses
+// @Security BearerAuth
+// @Router /likes/recipe/{id} [get]
+func (ctl *LikeController) GetLikesByRecipe(c *gin.Context) {
 	idRecipe := c.Param("id")
 	id, err := strconv.Atoi(idRecipe)
 
@@ -29,6 +40,15 @@ func (ctl *LikeController) GetLikeByRecipe(c *gin.Context) {
 	utils.PaginatedResponse(c, data, code, entity, c.Request.Method, total, page, limit)
 }
 
+// LikeByRecipe
+// @Summary Create a like by recipe
+// @Description Create a new like by recipe
+// @Tags Likes
+// @Accept json
+// @Produce json
+// @Success 201 {object} utils.StandardResponses
+// @Security BearerAuth
+// @Router /like/recipe/{id} [post]
 func (ctl *LikeController) LikeByRecipe(c *gin.Context) {
 	idRecipe := c.Param("id")
 	id, err := strconv.Atoi(idRecipe)
@@ -41,6 +61,15 @@ func (ctl *LikeController) LikeByRecipe(c *gin.Context) {
 	utils.HttpResponse(c, data, code, entity, c.Request.Method, errors)
 }
 
+// UnlikeByRecipe
+// @Summary Create an unlike by recipe
+// @Description Create an unlike by recipe
+// @Tags Likes
+// @Accept json
+// @Produce json
+// @Success 200 {object} utils.StandardResponses
+// @Security BearerAuth
+// @Router /unlike/recipe/{id} [post]
 func (ctl *LikeController) UnlikeByRecipe(c *gin.Context) {
 	idRecipe := c.Param("id")
 	id, err := strconv.Atoi(idRecipe)
